syntax = "proto3";

package socket.netty;

option java_package = "io.socket.netty.proto";
option java_outer_classname = "SocketNettyProtocol";

enum SERVER_TYPE {
    GATEWAY = 0;
    MATHCHING = 1;
    ROOM = 2;
}

// 基本数据类型
enum DATA_TYPE {
    INT = 0;
    STRING = 1;
    BIT = 2;
    LONG = 3;
    DOUBLUE = 4;
    FLOAT = 5;
}

// socket 请求体
message SocketRequest {
    SERVER_TYPE serverType = 1;
    string rcn = 2; // rpc class name
    string rcm = 3; // rpc class method
    repeated Arg args = 4; // 参数列表
}

// socket 响应
message SocketResponse {
    SERVER_TYPE serverType = 1;
    uint32 code = 2; // 错误码 0 表示成功
    bytes msg = 4; // json
}

// 通知的消息
message NotifyMessage {
    uint32 typeRouter = 1; // 通知类型
    uint32 code = 2; // 错误码 0 表示成功
    bytes msg = 3; // json
}

// 参数格式
message Arg {
    string name = 1;
    DATA_TYPE dataType = 2;
    repeated bytes value = 3;
}

// 系统默认错误码
enum SYSTEM_ERROR_CONSTANTS {
    SUCESS = 0; // 成功
    RPC_TARGET_CLASS_NOT_FOUND = 1; // 要调用的 rpc name 没有找到
}